Login form works, now just need to do something with the session.

--- a/rssbot/templates/rssbot/index.html
+++ b/rssbot/templates/rssbot/index.html
@@ -46,11 +46,11 @@ $(document).ready(function(){
     <div class="loginform">
     <div class="error"></div>
      <div class="formfields">
-       <label for="username">Username:</label>
-       <input type="text" name="username" id="username">
+       <label for="user">Username:</label>
+       <input type="text" name="user" id="user">
        <br />
-       <label for="password">Password:</label>
-       <input type="password" name="password" id="password">
+       <label for="pass">Password:</label>
+       <input type="password" name="pass" id="pass">
      </div>
      <div class="formsubmit">
        Submit
